--- a/app/src/main/res/layout/fragment_vipinfo.xml
+++ b/app/src/main/res/layout/fragment_vipinfo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@mipmap/ic_launcher"
     android:orientation="vertical"
@@ -13,6 +13,14 @@
         android:id="@+id/vip_choice"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <TextView
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="17dp"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/btn_finsih"
+        android:background="@mipmap/ic_finish"
+        android:layout_width="65dp"
+        android:layout_height="30dp" />
 
 
-</LinearLayout>
+</RelativeLayout>
