--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#ff07fff8</color>
     <color name="colorTextTest">#ffffffff</color>
+    <color name="colorTextWrite">#ffffffff</color>
 </resources>
