--- a/app/src/main/res/layout/activity_base_info_show.xml
+++ b/app/src/main/res/layout/activity_base_info_show.xml
@@ -3,65 +3,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/big_background"
     tools:context=".BaseInfoShowActivity">
-    <Button
+
+    <TextView
+
         android:id="@+id/base_info_back"
-    android:onClick="baseinfoBace"
-    android:text="返回"
-    android:layout_width="60dp"
-    android:layout_height="60dp" />
-    <Button
+        android:layout_width="@dimen/btn_main_width"
+        android:layout_height="@dimen/btn_main_height"
+        android:layout_marginTop="@dimen/btn_main_margin_top"
+        android:layout_marginLeft="@dimen/btn_main_margin_side"
+        android:background="@mipmap/ic_feedback"
+        android:onClick="baseinfoBace" />
+
+    <TextView
+        android:layout_marginTop="@dimen/btn_main_margin_top"
+        android:layout_marginRight="@dimen/btn_main_margin_side"
+        android:background="@mipmap/ic_delete"
+        android:layout_width="@dimen/btn_main_width"
+        android:layout_height="@dimen/btn_main_height"
         android:layout_alignParentEnd="true"
-        android:onClick="baseinfoDelete"
-        android:text="删除"
-        android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:onClick="baseinfoDelete" />
+
     <RelativeLayout
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
+
+        <RelativeLayout
+            android:layout_centerVertical="true"
+            android:background="@mipmap/portrait_vip"
+            android:id="@+id/base_show_head_back"
+            android:layout_width="175dp"
+            android:layout_height="203dp">
+            <TextView
+                android:id="@+id/base_show_vip_rate"
+                android:text="VIP1"
+                android:layout_centerHorizontal="true"
+                android:gravity="bottom"
+                android:textColor="@color/colorTextWrite"
+                android:layout_width="wrap_content"
+                android:layout_height="28dp" />
         <ImageView
+            android:scaleType="centerCrop"
+            android:layout_marginTop="43dp"
             android:id="@+id/base_show_head_img"
-            android:src="@mipmap/ic_launcher"
-            android:layout_centerVertical="true"
-            android:layout_width="120dp"
-            android:layout_height="120dp" />
+            android:layout_centerHorizontal="true"
+            android:layout_width="145dp"
+            android:layout_height="145dp"
+            android:src="@mipmap/ic_launcher" />
+        </RelativeLayout>
+
         <LinearLayout
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:layout_toRightOf="@id/base_show_head_img"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_marginLeft="57dp"
+            android:layout_toRightOf="@id/base_show_head_back"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/base_show_name"
-                android:text="姓名 ： Brandon"
+                android:textSize="@dimen/text_size_base_info"
+                android:textColor="@color/colorText"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/line_size_base_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="姓名 ： Brandon" />
+
             <TextView
                 android:id="@+id/base_show_gender"
-
-                android:text="性别 ： 男"
+                android:textSize="@dimen/text_size_base_info"
+                android:textColor="@color/colorText"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/line_size_base_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="性别 ： 男" />
+
             <TextView
                 android:id="@+id/base_show_phone"
-
-                android:text="电话 ： 13076990306"
+                android:textSize="@dimen/text_size_base_info"
+                android:textColor="@color/colorText"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/line_size_base_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="电话 ： 13076990306" />
+
             <TextView
                 android:id="@+id/base_show_birthday"
-
-                android:text="生日 ： 88-12-17"
+                android:textSize="@dimen/text_size_base_info"
+                android:textColor="@color/colorText"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/line_size_base_info"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="生日 ： 88-12-17" />
 
             <TextView
+
+                android:textSize="@dimen/text_size_base_info"
+                android:textColor="@color/colorText"
+                android:gravity="center_vertical"
+                android:layout_height="@dimen/line_size_base_info"
+
                 android:id="@+id/base_show_recognizer_count"
-                android:text="被访问次数 ： 1000"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:text="被访问次数 ： 1000" />
 
         </LinearLayout>
     </RelativeLayout>
