--- a/app/src/main/res/layout/fragment_vipinfo.xml
+++ b/app/src/main/res/layout/fragment_vipinfo.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@mipmap/ic_launcher"
     android:orientation="vertical"
     android:layout_height="match_parent">
     <TextView
-        android:text="vip_info"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <com.bigkoo.pickerview.lib.WheelView
-        android:id="@+id/vip_choice"
-        android:layout_width="match_parent"
+        android:id="@+id/take_position"
+        android:layout_alignParentEnd="true"
+        android:layout_width="130dp"
         android:layout_height="match_parent" />
     <TextView
         android:layout_marginTop="12dp"
@@ -21,6 +16,30 @@
         android:background="@mipmap/ic_finish"
         android:layout_width="65dp"
         android:layout_height="30dp" />
+    <RelativeLayout
+        android:layout_toLeftOf="@id/take_position"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_marginRight="20dp"
+            android:text="VIP等级"
+            android:gravity="center"
+            android:textSize="@dimen/text_size_base_info_choice"
+            android:textColor="@color/colorTextWrite"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+        <com.bigkoo.pickerview.lib.WheelView
+            android:id="@+id/vip_choice"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
