--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,22 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@mipmap/big_background"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="60dp">
-    <Button
-        android:background="#01000000"
-        android:text="返回"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+    <TextView
+        android:background="@mipmap/ic_feedback"
+        android:layout_marginTop="@dimen/btn_main_margin_top"
+        android:layout_marginLeft="@dimen/btn_main_margin_side"
+
+        android:layout_width="@dimen/btn_main_width"
+        android:layout_height="@dimen/btn_main_height" />
     <com.yongyida.yydrobotcv.customview.SiderBar
         android:id="@+id/side_bar"
         android:layout_width="match_parent"
-        android:layout_marginRight="60dp"
-        android:paddingRight="10dp"
+        android:layout_marginRight="37dp"
+        android:layout_marginLeft="37dp"
         android:layout_height="match_parent" />
 
 </LinearLayout>
@@ -31,10 +34,12 @@
             android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
-        <Button
+
+        <TextView
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="16dp"
             android:onClick="addNewUser"
-            android:background="@mipmap/ic_launcher"
-            android:text="添加"
+            android:background="@mipmap/ic_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
    </FrameLayout>
