--- a/app/src/main/res/layout/fragment_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_baseinfo.xml
@@ -74,20 +74,16 @@
                 android:layout_height="35dp" />
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/insert_birthday_tap"
+
+
+        <FrameLayout
             android:visibility="gone"
+            android:id="@+id/insert_birthday_tap"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:orientation="horizontal"
             android:layout_height="wrap_content">
-            <TextView
-                android:text="生日"
-                android:gravity="center"
-                android:textColor="@color/colorText"
-                android:layout_width="wrap_content"
-                android:layout_height="110dp" />
-        </LinearLayout>
+
+        </FrameLayout>
 
         <LinearLayout
             android:visibility="gone"
