--- a/app/src/main/res/drawable/button_register_bk.xml
+++ b/app/src/main/res/drawable/button_register_bk.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <!-- 获得焦点但未按下时的背景图片 -->
 
-    <item android:drawable="@mipmap/btn_pre" android:state_enabled="true" android:state_focused="true" android:state_pressed="false"/>
 
-    <!--&lt;!&ndash; 按下时的背景图片 &ndash;&gt;-->
-
-    <item android:drawable="@mipmap/btn_pre" android:state_enabled="true" android:state_pressed="true"/>
+    <item android:drawable="@mipmap/btn_pre"  android:state_checked="true"/>
 
     <!--<item android:drawable="@mipmap/btn_pre" android:state_enabled="true" android:state_focused="true"/>-->
 
-    <item android:drawable="@mipmap/btn_nor" />
+    <item android:drawable="@mipmap/btn_nor" android:state_checked="false"/>
 
 </selector>
