--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         </android.support.v7.widget.RecyclerView>
 
         <TextView
+            android:visibility="gone"
             android:layout_marginTop="2dp"
             android:layout_marginLeft="16dp"
             android:onClick="addNewUser"
