--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -6,16 +6,61 @@
     <include layout="@layout/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></include>
+
+    <ImageView
+        android:id="@+id/refer_face_frame"
+        android:src="@mipmap/ic_face_frame"
+        android:layout_centerInParent="true"
+        android:layout_width="156dp"
+        android:layout_height="156dp" />
+
     <TextView
+        android:id="@+id/left_refer_frame"
+        android:background="@color/colorCameraFrame"
+        android:layout_toStartOf="@id/refer_face_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/right_refer_frame"
+        android:background="@color/colorCameraFrame"
+        android:layout_toEndOf="@id/refer_face_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextView
+        android:layout_toRightOf="@id/left_refer_frame"
+        android:layout_toLeftOf="@id/right_refer_frame"
+        android:background="@color/colorCameraFrame"
+        android:layout_above="@id/refer_face_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextView
+        android:layout_toRightOf="@id/left_refer_frame"
+        android:layout_toLeftOf="@id/right_refer_frame"
+        android:background="@color/colorCameraFrame"
+        android:layout_below="@id/refer_face_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <TextView
+        android:layout_marginTop="25dp"
+        android:layout_below="@id/refer_face_frame"
         android:id="@+id/hint_face_side"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="注册正脸"
         android:textSize="@dimen/add_face_hint_text"
         android:textColor="@color/colorTextWrite"
-        android:layout_marginBottom="100dp"
         />
+    <TextView
 
+        android:layout_marginBottom="25dp"
+        android:layout_above="@id/refer_face_frame"
+        android:id="@+id/hint_face_side_up"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="请将人脸移入框内"
+        android:textSize="@dimen/add_face_hint_text"
+        android:textColor="@color/colorWarn"
+        />
 </RelativeLayout>
