--- a/app/src/main/res/layout/fragment_baseinfo.xml
+++ b/app/src/main/res/layout/fragment_baseinfo.xml
@@ -2,11 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_alignParentEnd="true"
-        android:id="@+id/hold_position"
-        android:layout_width="130dp"
-        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/btn_info_next"
         android:layout_width="@dimen/btn_main_width"
@@ -17,10 +13,7 @@
         android:background="@mipmap/ic_steps" />
 
 
-    <RelativeLayout
-        android:layout_toLeftOf="@id/hold_position"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <RelativeLayout
             android:layout_marginTop="25dp"
@@ -33,6 +26,7 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/info_step_1" />
             <LinearLayout
+                android:id="@+id/btn_hint_clickable"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -174,4 +168,3 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
