--- a/app/src/main/res/layout/activity_base_info_show.xml
+++ b/app/src/main/res/layout/activity_base_info_show.xml
@@ -32,11 +32,11 @@
 
         <RelativeLayout
             android:layout_centerVertical="true"
-            android:background="@mipmap/portrait_vip"
             android:id="@+id/base_show_head_back"
             android:layout_width="175dp"
-            android:layout_height="203dp">
+            android:layout_height="wrap_content">
             <TextView
+                android:visibility="gone"
                 android:id="@+id/base_show_vip_rate"
                 android:text="VIP1"
                 android:layout_centerHorizontal="true"
@@ -44,14 +44,20 @@
                 android:textColor="@color/colorTextWrite"
                 android:layout_width="wrap_content"
                 android:layout_height="28dp" />
+        <RelativeLayout
+            android:background="@mipmap/portrait_vip_no"
+                android:layout_below="@id/base_show_vip_rate"
+                android:layout_width="175dp"
+                android:layout_height="175dp">
         <ImageView
+            android:background="@mipmap/portrait_vip_no"
             android:scaleType="centerCrop"
-            android:layout_marginTop="43dp"
             android:id="@+id/base_show_head_img"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:layout_width="145dp"
             android:layout_height="145dp"
             android:src="@mipmap/ic_launcher" />
+            </RelativeLayout>
         </RelativeLayout>
 
         <LinearLayout
