--- a/app/src/main/res/layout/enroll__baseinfo_fragment.xml
+++ b/app/src/main/res/layout/enroll__baseinfo_fragment.xml
@@ -68,6 +68,7 @@
                 android:textSize="@dimen/text_size_base_info_choice"
                 android:gravity="center"
                 android:text="手机号"
+                android:paddingRight="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
             <EditText
@@ -75,7 +76,8 @@
                 android:background="@mipmap/ic_edit_bg"
                 android:id="@+id/edit_phone"
                 android:imeOptions="flagNoExtractUi"
-                android:hint="正确的的手机号码 "
+                android:hint="请输入手机号码"
+                android:textColorHint="@color/colorEditHint"
                 android:textColor="@color/colorTextWrite"
                 android:gravity="center"
                 android:layout_width="150dp"
@@ -108,12 +110,14 @@
                 android:text="姓名"
                 android:textColor="@color/colorTextWrite"
                 android:textSize="@dimen/text_size_base_info_choice"
+                android:paddingRight="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" />
             <EditText
                 android:singleLine="true"
                 android:background="@mipmap/ic_edit_bg"
                 android:hint="数字、中文和字母"
+                android:textColorHint="@color/colorEditHint"
                 android:textColor="@color/colorTextWrite"
                 android:imeOptions="flagNoExtractUi"
                 android:gravity="center"
