--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colorTextWrite">#ffffffff</color>
     <color name="colorToast">#19000000</color>
     <color name="colorCameraFrame">#99000000</color>
+    <color name="colorEditHint">#ff2491a2</color>
 </resources>
