--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,7 +5,7 @@
     android:background="@mipmap/big_background"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PersonListActivity">
+    tools:context=".MianListActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="60dp">
