--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorWarn">#fe3d61</color>
-    <color name="colorText">#ff07fff8</color>
+    <color name="colorWarn">#FF3AFFC5</color>
+    <color name="colorText">#ffffffff</color>
+    <color name="colorTextBlack">#000000</color>
     <color name="colorTextTest">#ffffffff</color>
     <color name="colorTextWrite">#ffffffff</color>
     <color name="colorToast">#19000000</color>
     <color name="colorCameraFrame">#99000000</color>
-    <color name="colorEditHint">#ff2491a2</color>
+    <color name="colorEditHint">#FFB0B4FE</color>
+    <color name="dialogBackColor">#ffffffff</color>
+    <color name="nextBtnBackColor">#19000000</color>
+
 </resources>
