--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/dialog_bg"
     android:layout_width="289dp"
-    android:background="@mipmap/bg_finish"
     android:layout_height="175dp">
     
     <RelativeLayout
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/reference_dialog"
         android:textSize="15sp"
-        android:textColor="@color/colorText"
+        android:textColor="@color/colorTextBlack"
         android:text="离开你输入的数据将不会被保存"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -23,20 +23,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/cancel_confirm"
+                android:id="@+id/cancel_close"
                 android:background="@mipmap/btn_qx"
                 android:gravity="center"
-                android:text="确 认"
+                android:text="取 消"
+
                 android:textSize="14sp"
                 android:textColor="@color/colorTextWrite"
                 android:layout_width="77dp"
                 android:layout_height="29dp" />
             <TextView
-                android:id="@+id/cancel_close"
-                android:layout_marginLeft="38dp"
-                android:background="@mipmap/btn_qx"
+                android:id="@+id/cancel_confirm"
+                android:background="@mipmap/btn_qx1"
                 android:gravity="center"
-                android:text="取 消"
+                android:text="确 认"
+                android:layout_marginLeft="38dp"
                 android:textSize="14sp"
                 android:textColor="@color/colorTextWrite"
                 android:layout_width="77dp"
