--- a/app/src/main/res/layout/main_enroll_activity.xml
+++ b/app/src/main/res/layout/main_enroll_activity.xml
@@ -11,8 +11,8 @@
         android:onClick="registerBack"
         android:background="@mipmap/ic_feedback"
         android:gravity="center"
-        android:layout_width="65dp"
-        android:layout_height="30dp" />
+        android:layout_width="@dimen/btn_main_width"
+        android:layout_height="@dimen/btn_main_height" />
 
     <FrameLayout
         android:id="@+id/register_frame"
