--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="add_face_hint_text">16dp</dimen>
-    <dimen name="btn_main_height">30dp</dimen>
-    <dimen name="btn_main_width">65dp</dimen>
-    <dimen name="btn_main_margin_top">12dp</dimen>
-    <dimen name="btn_main_margin_side">17dp</dimen>
+    <dimen name="btn_main_height">20dp</dimen>
+    <dimen name="btn_main_width">21dp</dimen>
+    <dimen name="btn_next_height">35dp</dimen>
+    <dimen name="btn_next_width">73dp</dimen>
+    <dimen name="btn_main_margin_top">21dp</dimen>
+    <dimen name="btn_main_margin_side">32dp</dimen>
     <dimen name="text_size_base_info">14sp</dimen>
     <dimen name="text_size_base_info_choice">16sp</dimen>
     <dimen name="text_size_item">16sp</dimen>
     <dimen name="line_size_base_info">45dp</dimen>
+    <dimen name="btn_next_text_size">16sp</dimen>
+    <dimen name="btn_info_delete_height">35dp</dimen>
+    <dimen name="btn_info_delete_width">35dp</dimen>
 </resources>
