--- a/app/src/main/res/layout/main_test_activity.xml
+++ b/app/src/main/res/layout/main_test_activity.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainTestActivity">
+    android:orientation="vertical">
     <Button
-        android:text="开始人体检测"
+        android:text="开始收拾游戏"
         android:onClick="startPersonDetect"
         android:layout_width="match_parent"
         android:layout_height="60dp" />
